# playground

./: .gitignore  README.markdown
bsymbolic-testcase/: Makefile  libtest.cpp  libtest_syms.txt  override.c  test.cpp
hello_killme/: Makefile  hello_killme.c  hello_killme.kdev4
hello_printk/: Makefile  hello_printk.c  hello_printk.kdev4
hello_proc/: Makefile  hello_proc.c  hello_proc.kdev4
qmainwindow-cmake-template/: CMakeLists.txt
qmainwindow-cmake-template/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
qt5-plugin-example/: CMakeLists.txt
qt5-plugin-example/plugin/: echoplugin.json
